tests/ui/parser/issue-68092-unicode-ident-after-incomplete-expr.rs
macro_rules! x {
    ($($c:tt)*) => {
        $($c)รถ* //~ ERROR macro expansion ends with an incomplete expression: expected expression
    };
}

fn main() {
    x!(!);
}
